# nx-fontgen

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
assets/: Pixeltype.sfd
src/: App.cpp  App.h  CMakeLists.txt  Config.h  FontInfo.cpp  FontInfo.h  ProgramOptions.cpp  ProgramOptions.h  args.hpp  main.cpp
src/maxRectsBinPack/: MaxRectsBinPack.cpp
src/sdlSavePng/: savepng.cpp  savepng.h
travis/: fontbm.sh  linux.package.sh  osx.install.sh  sobundler.sh
win32/: win.package.ps1
win32/fontbm/: fontbm.sln  fontbm.vcxproj  fontbm.vcxproj.filters
